--- a/personnel.css
+++ b/personnel.css
@@ -255,15 +255,25 @@
     /* Media Queries */
     @media (max-width: 768px) {
         .hero-content h1 {
-            font-size: 2.5rem;
+            font-size: 2.2rem;
         }
     
         .hero-content p {
             font-size: 1rem;
         }
+        h2{
+            font-size: 2.0rem;
+        }
     
         .support-overview .col-md-6 {
             margin-bottom: 30px;
+        }
+        .cta-section h2 {
+            font-size: 1.5rem;
+        }
+    
+        .cta-section p {
+            font-size: 0.95rem !important;
         }
     }
     
