--- a/main.css
+++ b/main.css
@@ -1177,3 +1177,86 @@ p, a, li, span {
         align-items: center !important;
     }
 }
+
+
+.back-to-top {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background-color: rgb(20, 20, 20);
+    border: none;
+    font-weight: 600;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0px 0px 0px 4px rgba(180, 160, 255, 0.253);
+    cursor: pointer;
+    transition-duration: 0.3s;
+    overflow: hidden;
+    position: relative;
+  }
+  
+  .svgIcon {
+    width: 6px;
+    transition-duration: 0.3s;
+  }
+  
+  .svgIcon path {
+    fill: white;
+  }
+  
+  .back-to-top:hover {
+    width: 140px;
+    border-radius: 50px;
+    transition-duration: 0.3s;
+    background-color: rgb(247, 247, 247);
+    align-items: center;
+  }
+  
+  .back-to-top:hover .svgIcon {
+    /* width: 20px; */
+    transition-duration: 0.3s;
+    transform: translateY(-200%);
+  }
+  .back-to-top::before {
+    position: absolute;
+    bottom: -20px;
+    content: "Back to Top";
+    color: #333;
+    /* transition-duration: .3s; */
+    font-size: 0px;
+  }
+  
+  .back-to-top:hover::before {
+    font-size: 13px;
+    opacity: 1;
+    bottom: unset;
+    /* transform: translateY(-30px); */
+    transition-duration: 0.3s;
+  }
+
+  .btnway {
+    display: flex;
+    justify-content: flex-end; /* Align button to the right */
+    align-items: center; /* Vertically center the button */
+    padding: 0; /* Optional: Adjust padding as needed */
+}
+  
+
+@media (max-width: 768px) {
+    .back-to-top {
+        width: 40px; /* Smaller for mobile */
+        height: 40px;
+    }
+    .back-to-top:hover {
+        width: 100px; /* Smaller expand width on mobile */
+    }
+
+    
+  .btnway {
+    display: flex;
+    justify-content:  center; /* Align button to the right */
+    align-items: center; /* Vertically center the button */
+    padding: 0; /* Optional: Adjust padding as needed */
+}
+}
