--- a/about.css
+++ b/about.css
@@ -175,7 +175,7 @@ p {
 /* Hero Section */
 .hero-section {
     position: relative;
-    background-image: url('static/images/1.jpg');
+    background-image: url('static/images/oilpersonnel2.jpg');
     background-size: cover;
     background-position: center;
     height: 100vh;
