--- a/products.css
+++ b/products.css
@@ -39,9 +39,22 @@ p {
 }
 
 .navbar-brand {
-    font-weight: bold;
-    color: #fff;
-    transition: color 0.4s ease;
+    display: block; /* Ensure the brand occupies space */
+    background: url("static/images/logo/samdus_white.png") no-repeat center center;
+    background-size: contain; /* Ensure the image fits within the set dimensions */
+    width: 150px; /* Set the width of the brand image */
+    height: 50px; /* Set an appropriate height */
+    text-indent: -9999px;
+}
+
+
+.navbar.scrolled .navbar-brand{
+    display: block; /* Ensure the brand occupies space */
+    background: url("static/images/logo/samdus\ trans.png") no-repeat center center;
+    background-size: contain; /* Ensure the image fits within the set dimensions */
+    width: 150px; /* Set the width of the brand image */
+    height: 50px; /* Set an appropriate height */
+    text-indent: -9999px;
 }
 
 .nav-item{
@@ -105,7 +118,13 @@ p {
     }
 
     .navbar-brand {
-        font-size: 1.25rem;
+        width: 120px; /* Adjust width for mobile screens */
+        height: 40px;
+    }
+
+    .navbar.scrolled .navbar-brand{
+        width: 120px; /* Adjust width for mobile screens */
+        height: 40px;
     }
 
     .nav-link {
@@ -120,6 +139,16 @@ p {
 
     .nav-item {
         margin: 0.5rem 0;
+    }
+
+    .navbar-brand {
+        width: 120px; /* Adjust width for mobile screens */
+        height: 40px;
+    }
+
+    .navbar.scrolled .navbar-brand{
+        width: 120px; /* Adjust width for mobile screens */
+        height: 40px;
     }
 
     .navbar {
@@ -281,6 +310,16 @@ p {
         flex: 1 1 100%; /* Make text and images full-width on smaller screens */
         padding: 0 20px; /* Add padding for alignment on smaller screens */
     }
+
+    
+    .logo{  
+        text-align: center !important;
+        justify-content: center !important;
+        align-items: center !important;
+        padding-right: 60px;
+        
+    }
+    
 }
 
 @media (max-width: 768px) {
@@ -504,6 +543,15 @@ p {
         transform: translateX(-50%);
     }
 
+    .logo{  
+        text-align: center !important;
+        justify-content: center !important;
+        align-items: center !important;
+        padding-right: 60px;
+        
+    }
+
+
     .linkfooter {
         text-align: center !important;
         justify-content: center !important;
@@ -524,6 +572,15 @@ p {
     .footer-addresses {
         text-align: center !important;
     }
+
+    .logo{  
+        text-align: center !important;
+        justify-content: center !important;
+        align-items: center !important;
+        padding-right: 60px;
+        
+    }
+
 
     .address {
         padding: 15px 0;
@@ -618,6 +675,14 @@ p {
     }
     .back-to-top:hover {
         width: 100px; /* Smaller expand width on mobile */
+    }
+
+    .logo{  
+        text-align: center !important;
+        justify-content: center !important;
+        align-items: center !important;
+        padding-right: 60px;
+        
     }
 
     
