--- a/services.css
+++ b/services.css
@@ -35,9 +35,22 @@
 }
 
 .navbar-brand {
-    font-weight: bold;
-    color: #fff;
-    transition: color 0.4s ease;
+    display: block; /* Ensure the brand occupies space */
+    background: url("static/images/logo/samdus_white.png") no-repeat center center;
+    background-size: contain; /* Ensure the image fits within the set dimensions */
+    width: 150px; /* Set the width of the brand image */
+    height: 50px; /* Set an appropriate height */
+    text-indent: -9999px;
+}
+
+
+.navbar.scrolled .navbar-brand{
+    display: block; /* Ensure the brand occupies space */
+    background: url("static/images/logo/samdus\ trans.png") no-repeat center center;
+    background-size: contain; /* Ensure the image fits within the set dimensions */
+    width: 150px; /* Set the width of the brand image */
+    height: 50px; /* Set an appropriate height */
+    text-indent: -9999px;
 }
 
 .nav-item{
@@ -100,18 +113,35 @@
         padding: 0.5rem 0;
     }
 
-    .navbar-brand {
-        font-size: 1.25rem;
-    }
-
+ 
     .nav-link {
         font-size: 0.9rem;
+    }
+
+    .navbar-brand {
+        width: 120px; /* Adjust width for mobile screens */
+        height: 40px;
+    }
+
+    .navbar.scrolled .navbar-brand{
+        width: 120px; /* Adjust width for mobile screens */
+        height: 40px;
     }
 }
 
 @media (max-width: 767px) {
     .navbar-nav {
         text-align: center;
+    }
+
+    .navbar-brand {
+        width: 120px; /* Adjust width for mobile screens */
+        height: 40px;
+    }
+
+    .navbar.scrolled .navbar-brand{
+        width: 120px; /* Adjust width for mobile screens */
+        height: 40px;
     }
 
     .nav-item {
@@ -805,6 +835,15 @@
         justify-content: center !important;
         align-items: center !important;
     }
+
+    .logo{  
+        text-align: center !important;
+        justify-content: center !important;
+        align-items: center !important;
+        padding-right: 60px;
+        
+    }
+
 }
 
 @media (max-width: 576px) {
@@ -834,6 +873,15 @@
         justify-content: center !important;
         align-items: center !important;
     }
+
+    .logo{  
+        text-align: center !important;
+        justify-content: center !important;
+        align-items: center !important;
+        padding-right: 60px;
+        
+    }
+
 }
 
 
@@ -919,3 +967,13 @@
     padding: 0; /* Optional: Adjust padding as needed */
 }
 }
+
+
+.logo{  
+    text-align: center !important;
+    justify-content: center !important;
+    align-items: center !important;
+    padding-right: 60px;
+    
+}
+
