--- a/operational_excellence.css
+++ b/operational_excellence.css
@@ -524,11 +524,21 @@ body {
     transition-duration: 0.3s;
 }
 
+@media (max-width:1400px){
+    h2{
+        text-align: center;
+    }
+}
+
 /* Media Queries for Responsive Design */
 @media (max-width: 768px) {
     .footer-section .col-md-3 {
         text-align: center !important;
         margin-bottom: 30px;
+    }
+
+    h2{
+        text-align: center;
     }
 
     .footer-addresses {
@@ -587,6 +597,9 @@ body {
         text-align: center !important;
     }
 
+    h2{
+        text-align: center;
+    }
     .address {
         padding: 15px 0;
         text-align: center !important;
